[package]
name = "ipfs-block"
version = "0.1.0"
authors = ["The PolkaX Authors"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
cid = { version = "0.5", git = "https://github.com/PolkaX/rust-cid", branch = "impl-cbor-and-json" , features = ["cbor", "json"] }
minicbor = { version = "0.4", features = ["std"] }
multihash = "0.11"
